--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -14,7 +14,8 @@
 	<link rel="me" href="https://www.threads.net/@jasondotgov" />
 	<link rel="me" href="https://www.tiktok.com/@jasondotgov" />
 	<link rel="me" href="https://pixelriot.io/" />
-    <!-- Open graph stuff -->
+        <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
+<!-- Open graph stuff -->
     <meta property="og:site_name" content="from jason" />
     <meta property="og:type" content="{{ data.type or 'Digital Garden'}}" />
     <meta property="og:title" content="{{ title or metadata.title}}" />
