--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,6 +9,7 @@
     <!-- Netlify stuff -->
     <link rel="micropub" href="https://www.fromjason.xyz/.netlify/functions/micropub" />
     <!-- rel=me stuff -->
+    <link rel="me" href="https://github.com/fromjasonstuff" />
     <link rel="me" href="https://mastodon.social/@fromjason" />
     <link rel="me" href="https://instagram.com/jasondotgov" />
 	<link rel="me" href="https://www.threads.net/@jasondotgov" />
