--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -16,6 +16,8 @@
 	<link rel="me" href="https://www.tiktok.com/@jasondotgov" />
 	<link rel="me" href="https://pixelriot.io/" />
         <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
+<!-- Webmentions -->
+<link rel="webmention" href="https://webmention.io/www.fromjason.xyz/webmention" />
 <!-- Open graph stuff -->
     <meta property="og:site_name" content="from jason" />
     <meta property="og:type" content="{{ data.type or 'Digital Garden'}}" />
