--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -12,13 +12,15 @@
     <link rel="me" href="https://github.com/fromjasonstuff" />
     <link rel="me" href="https://mastodon.social/@fromjason" />
     <link rel="me" href="https://instagram.com/jasondotgov" />
-	<link rel="me" href="https://www.threads.net/@jasondotgov" />
-	<link rel="me" href="https://www.tiktok.com/@jasondotgov" />
-	<link rel="me" href="https://pixelriot.io/" />
-        <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
-<!-- Webmentions -->
-<link rel="webmention" href="https://webmention.io/www.fromjason.xyz/webmention" />
-<!-- Open graph stuff -->
+    <link rel="me" href="https://www.threads.net/@jasondotgov" />
+    <link rel="me" href="https://www.tiktok.com/@jasondotgov" />
+    <link rel="me" href="https://pixelriot.io/" />
+    <!-- IndieAuth -->
+    <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
+    <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
+    <!-- Webmentions -->
+    <link rel="webmention" href="https://webmention.io/www.fromjason.xyz/webmention" />
+    <!-- Open graph stuff -->
     <meta property="og:site_name" content="from jason" />
     <meta property="og:type" content="{{ data.type or 'Digital Garden'}}" />
     <meta property="og:title" content="{{ title or metadata.title}}" />
