--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -15,6 +15,8 @@
     <link rel="me" href="https://www.threads.net/@jasondotgov" />
     <link rel="me" href="https://www.tiktok.com/@jasondotgov" />
     <link rel="me" href="https://pixelriot.io/" />
+    <!-- Microsub server (Apature) -->
+    <link rel="microsub" href="https://aperture.p3k.io/microsub/905" />
     <!-- IndieAuth -->
     <link rel="authorization_endpoint" href="https://indieauth.com/auth" />
     <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
