--- a/content/index.njk
+++ b/content/index.njk
@@ -12,8 +12,8 @@ openGraph: 'fromjason'
 sub: fromjason
 ---
 
-<article class="article">
-   <h2>What's up nerds, I'm <a rel="me" class="h-card" href="https://www.fromjason.xyz/" style="text-decoration: none;">Jason</a>.</h2>
+<article class="h-card article">
+   <h2>What's up nerds, I'm <a rel="me" href="https://www.fromjason.xyz/" style="text-decoration: none;">Jason</a>.</h2>
 <p class="p-note lead">I'm a freelancer, web developer, writer, uncle, solo traveler, pastry sommelier, and a great admirer of the French Goodbye.</p>   
 <p><i>From Jason</i> is my digital garden with multiple “<a href="/p/">plots</a>.” You can read more about my set up <a href="/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/" title="digital garden">here</a>.</p>
    <p>Welcome. I trust you found the place okay? Coming way out here to the digital wilderness, I bet you're tired and hungry, huh? Well, this is the internet. I can't feed you or anything. Weirdos. But, I'm happy to show you around.</p>
