--- a/content/index.njk
+++ b/content/index.njk
@@ -13,9 +13,9 @@ sub: fromjason
 ---
 
 <article class="h-card article">
-   <h2>What's up nerds, I'm <a rel="me" href="https://www.fromjason.xyz/" style="text-decoration: none;">Jason</a>.</h2>
+   <h2>What's up nerds, I'm <span class="p-given-name">Jason</span>.</h2>
 <p class="p-note lead">I'm a freelancer, web developer, writer, uncle, solo traveler, pastry sommelier, and a great admirer of the French Goodbye.</p>   
-<p><i>From Jason</i> is my digital garden with multiple “<a href="/p/">plots</a>.” You can read more about my set up <a href="/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/" title="digital garden">here</a>.</p>
+<p><i><a rel="me" class="u-url" href="https://www.fromjason.xyz/">From Jason</a></i> is my digital garden with multiple “<a href="/p/">plots</a>.” You can read more about my set up <a href="/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/" title="digital garden">here</a>.</p>
    <p>Welcome. I trust you found the place okay? Coming way out here to the digital wilderness, I bet you're tired and hungry, huh? Well, this is the internet. I can't feed you or anything. Weirdos. But, I'm happy to show you around.</p>
    <p>This is my space. I designed it myself (with <a href="/me/colophon/" title="colophon">help</a>). It's where I store my <a href="/p/notebook" title="my notebook">writings</a>, <a href="/me/now/" title="my projects">projects</a>, thoughts, internet <a href="/p/stories/s/oddities/">oddities</a>, failed dreams, and new hopes. It's ever-changing, and at times, ill-defined. And that's fine by me.</p>
    <p>Feel free to <a href="/all/" title="all posts">poke around</a>. I'm glad you're here.</p>
