--- a/content/index.njk
+++ b/content/index.njk
@@ -13,12 +13,15 @@ sub: fromjason
 ---
 
 <article class="h-card article">
-   <h2>What's up nerds, I'm <span class="p-given-name">Jason</span>.</h2>
-<p class="p-note lead">I'm a freelancer, web developer, writer, uncle, solo traveler, pastry sommelier, and a great admirer of the French Goodbye.</p>   
-<p><i><a rel="me" class="u-url" href="https://www.fromjason.xyz/">From Jason</a></i> is my digital garden with multiple “<a href="/p/">plots</a>.” You can read more about my set up <a href="/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/" title="digital garden">here</a>.</p>
-   <p>Welcome. I trust you found the place okay? Coming way out here to the digital wilderness, I bet you're tired and hungry, huh? Well, this is the internet. I can't feed you or anything. Weirdos. But, I'm happy to show you around.</p>
-   <p>This is my space. I designed it myself (with <a href="/me/colophon/" title="colophon">help</a>). It's where I store my <a href="/p/notebook" title="my notebook">writings</a>, <a href="/me/now/" title="my projects">projects</a>, thoughts, internet <a href="/p/stories/s/oddities/">oddities</a>, failed dreams, and new hopes. It's ever-changing, and at times, ill-defined. And that's fine by me.</p>
-   <p>Feel free to <a href="/all/" title="all posts">poke around</a>. I'm glad you're here.</p>
+<h2>What's up nerds, I'm <span class="p-given-name">Jason</span>.</h2>
+
+<p class="p-note">I'm a digital freelancer, writer, uncle, internet troublemaker, and a fond admirer of the French Goodbye.</p>
+
+<p><a rel="me" class="u-url" href="https://www.fromjason.xyz/">From Jason</a> is my <a href="/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/">digital garden</a>— a personal website where I tend to <a hef="/p/notebook/" title="my notebook">my writing</a>, <a href="/me/now/" title="me, now">projects</a>, <a href="/p/stories/s/oddities/" title="oddities series">oddities</a>, interesting finds, failed dreams, and new hopes.</p>
+
+<p>I built this site from the ashes of Twitter and Facebook, using <a href="https://indieweb.org/principles" title="indie web principles">Indie Web</a> tenets for my mortar. What is made, stands as a rejection of corporate social media silos and signals my full participation in the <a href="https://indieweb.org" title="indieweb wiki">Indie Web</a>. Plus, chicks dig personal websites, bro. Scientific fact.</p>
+
+<p>Welcome. Feel free to <a href="https://www.fromjason.xyz/all/" title="all posts">poke around</a>, subscribe to one of my RSS feeds (<a href="https://www.fromjason.xyz/p/notebook/feed/feed.xml" title="notebook RSS">here's my notebook</a>), and <a href="https://www.fromjason.xyz/me/" title="me page">contact me</a> directly. I'm glad you're here.</p>
 </article>
 {% set postsCount = collections.posts | length %}
 {% set latestPostsCount = postsCount | min(numberOfLatestPostsToShow) %}
