--- a/content/index.njk
+++ b/content/index.njk
@@ -14,13 +14,9 @@ sub: fromjason
 
 <article class="h-card article">
 <h2>What's up nerds, I'm <span class="p-given-name">Jason</span>.</h2>
-
-<p class="p-note">I'm a digital freelancer, writer, uncle, internet troublemaker, and a fond admirer of the French Goodbye.</p>
-
+<p class="p-note">I'm a digital freelancer, writer, uncle, <a href="https://www.washingtonpost.com/nation/2018/12/05/rudy-giulianis-typo-became-an-anti-trump-message-he-blamed-twitter-this-atlanta-man-pranked-him/" title="My Rudy Giuliani trolling">internet troublemaker</a>, and fond admirer of the French Goodbye.</p>
 <p><a rel="me" class="u-url" href="https://www.fromjason.xyz/">From Jason</a> is my <a href="/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/">digital garden</a>— a personal website where I tend to <a hef="/p/notebook/" title="my notebook">my writing</a>, <a href="/me/now/" title="me, now">projects</a>, <a href="/p/stories/s/oddities/" title="oddities series">oddities</a>, interesting finds, failed dreams, and new hopes.</p>
-
 <p>I built this site from the ashes of Twitter and Facebook, using <a href="https://indieweb.org/principles" title="indie web principles">Indie Web</a> tenets for my mortar. What is made, stands as a rejection of corporate social media silos and signals my full participation in the <a href="https://indieweb.org" title="indieweb wiki">Indie Web</a>. Plus, chicks dig personal websites, bro. Scientific fact.</p>
-
 <p>Welcome. Feel free to <a href="https://www.fromjason.xyz/all/" title="all posts">poke around</a>, subscribe to one of my RSS feeds (<a href="https://www.fromjason.xyz/p/notebook/feed/feed.xml" title="notebook RSS">here's my notebook</a>), and <a href="https://www.fromjason.xyz/me/" title="me page">contact me</a> directly. I'm glad you're here.</p>
 </article>
 {% set postsCount = collections.posts | length %}
