--- a/content/index.njk
+++ b/content/index.njk
@@ -7,11 +7,10 @@ numberOfLatestPostsToShow: 5
 rssDir: '/p/notebook'
 title: from jason
 description: A digital garden for a physical meat bag.
-logo: 'fromjason-1.svg'
-openGraph: 'fromjason'
+logo: 'logo-fromjason.svg'
+openGraph: 'opengraph-fromjason.png'
 sub: fromjason
 ---
-
 <article class="h-card article">
 <h2>What's up nerds, I'm <span class="p-given-name">Jason</span>.</h2>
 <p class="p-note">I'm a digital freelancer, writer, uncle, <a href="https://www.washingtonpost.com/nation/2018/12/05/rudy-giulianis-typo-became-an-anti-trump-message-he-blamed-twitter-this-atlanta-man-pranked-him/" title="My Rudy Giuliani trolling">internet troublemaker</a>, and fond admirer of the French Goodbye.</p>
