--- a/content/me/colophon.njk
+++ b/content/me/colophon.njk
@@ -1,7 +1,7 @@
 ---
 title: Colophon
 description: Or, how I made this website, who helped, and all my inspirations.
-graphic: 'graphic-colophon.png'
+graphic: 'colophon.png'
 graphicAlt: 'illustration of two masks'
 sub: me
 ---
