--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -1,8 +1,8 @@
 ---
 title: Jason Velazquez
 description: This section is about me, Jason. It includes a few sub pages, plus where to find me.  Why are you looking for me? Weirdo. (Please look for me). 
-graphic: 'IMG_2427.jpeg'
-graphicAlt: 'illustration of a mask'
+graphic: 'jasonvelazquez.jpg'
+graphicAlt: 'picture of Jason'
 plot: me
 eleventyComputed:
   eleventyNavigation:
