--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 body: body-primary
-openGraph: 'fromjason'
+openGraph: 'fromjason.png'
 ---
  <header class="header">
  	{% include "partials/nav.njk" %}
