--- a/_includes/layouts/series.njk
+++ b/_includes/layouts/series.njk
@@ -1,12 +1,12 @@
 ---
 layout: layouts/base.njk
-defaultGraphic: 'default-graphic.png'
+defaultGraphic: 'default.png'
 ---
 <header class="header">
    {% include "partials/backbutton.njk" %}
    {% include "partials/jumplink.njk" %}
 </header>
 <article class="article">
-   <img class="graphic" src="{{ settings.siteRoot}}/img/graphics/{% if graphic %}{{ graphic }}{% else %}{{ defaultGraphic }}{% endif %}" loading="lazy" alt="{{ graphicAlt }}" > 
+   <img class="graphic" src="{{ settings.siteRoot}}/img/graphic-{% if graphic %}{{ graphic }}{% else %}{{ defaultGraphic }}{% endif %}" loading="lazy" alt="{{ graphicAlt }}" > 
    {{ content | safe }}
 </article>
