--- a/_includes/partials/backbutton.njk
+++ b/_includes/partials/backbutton.njk
@@ -15,4 +15,4 @@
 	{{ page.url | truncate(pageMinusSlug, true, "/") }}
 {% endset %}
 
-<a id="backButton" href="{{ parentURL }}" class="back-btn w-inline-block"><img src="{{ settings.siteRoot}}/img/double-caret-left-2.svg" loading="lazy" alt="Back button double caret" class="caret"></a>
+<a id="backButton" href="{{ parentURL }}" class="back-btn w-inline-block" aria-label="back button"><img src="{{ settings.siteRoot}}/img/element-doublecaretleft.svg" loading="lazy" alt="Back button double caret" class="caret"></a>
