--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-defaultGraphic: '5.png'
+defaultGraphic: 'graphic-default.png'
 ---
 <header class="header">
    <nav class="navbar">
@@ -9,7 +9,7 @@ defaultGraphic: '5.png'
    </nav>
 </header>
 <article class="h-entry article">
-   <img class="graphic" src="{{ settings.siteRoot}}/img/graphics/{% if graphic %}{{ graphic }}{% else %}{{ defaultGraphic }}{% endif %}" loading="lazy" alt="{{ graphicAlt }}" > 
+   <img class="graphic" src="{{ settings.siteRoot}}/img/{% if postGraphic %}{{ postGraphic }}{% else %}{{ defaultGraphic }}{% endif %}" loading="lazy" alt="{{ graphicAlt }}" > 
 <div class="e-content">   
 {{ content | safe }}
  </div>  
