--- a/content/humans.txt.njk
+++ b/content/humans.txt.njk
@@ -17,3 +17,5 @@ I'm considering an entry format for my humans.txt to keep it evergreen and my li
 ## My first entry: November 19, 2023
 
 It's 5:22pm on a Sunday. I'm hungry and running out of steam so, this file is officially incomplete. Check back very soon.
+
+For now, my colophon does a decent job at providing credit. You can check it out here: https://www.fromjason.xyz/me/colophon/
