--- a/content/series/digital content initiative.njk
+++ b/content/series/digital content initiative.njk
@@ -11,12 +11,23 @@ graphic: '293.png'
 graphicAlt: 'illustration of a dragon crest'
 tags: ['indie web']
 ---
-# {{ title }}
+<p class="overline accent">Series</p>
+<h1>{{ title }}</h1>
+<p class="lead under-title">{{ description }}</p>
 
-{{ description }}
+<p>This series outlines an initiative to take back a sense of ownership for the things I create and post to the internet. It provides methods for consolidating my writing files under one, open format roof. While the focus of this initiative is currently limited to my writing files, my hope is to expand the scope over time.</p>
 
-This series outlines an initiative to take back a sense of ownership for the things I create and post to the internet. It provides methods for consolidating my writing files under one, open format roof. While the focus of this initiative is currently limited to my writing files, my hope is to expand the scope over time. 
+<p>Consider these documents my attempt at learning in public. You are reading a first draft, complete with typos, clumsy prose, and unsourced jabber. It will improve over time, but I think there's some decent stuff in here already.</p> 
 
-Consider these documents my attempt at learning in public. You are reading a first draft, complete with typos, clumsy prose, and unsourced jabber. It will improve over time, but I think there's some decent stuff in here already. 
+<p>The methods outlined are also a work in progress, and require iterative improvements. I'll continue to update this document as I better understand my writing workflow and efficiency needs.</p>
 
-The methods outlined are also a work in progress, and require iterative improvements. I'll continue to update this document as I better understand my writing workflow and efficiency needs. 
+<h2>Table of Contents</h2>
+<div class="auto-list-block">
+
+{% set seriesIDposts = collections.posts | include("data.seriesID", "digital content initiative") %}
+
+{% set postslist = seriesIDposts %}
+
+{% include "seriespostslist.njk" %}
+
+</div>
