Update digital content initiative.njk

--- a/content/series/digital content initiative.njk
+++ b/content/series/digital content initiative.njk
@@ -7,7 +7,7 @@ date: 2023-11-22
 series: titlepage
 seriesID: digital content initiative
 audience: everyone
-graphic: '293.png'
+pageGraphic: 'graphic-293.png'
 graphicAlt: 'illustration of a dragon crest'
 tags: ['indie web']
 ---
