--- a/_includes/partials/masthead.njk
+++ b/_includes/partials/masthead.njk
@@ -2,4 +2,5 @@
                   <img src="{{ settings.siteRoot}}/img/{{ logo }}" loading="lazy" alt="grotesque mask illustration" class="deckhead-img">
                   <h1 class="display">{{ title }}</h1>
                   <p class="lead enter-text">{{ description }}</p>
+                  {% include "partials/cta.njk" %}
                </aside>
