--- a/_includes/partials/masthead.njk
+++ b/_includes/partials/masthead.njk
@@ -1,6 +1,6 @@
                <aside class="masthead">
                   <img src="{{ settings.siteRoot}}/img/{{ logo }}" loading="lazy" alt="grotesque mask illustration" class="deckhead-img">
                   <h1 class="display">{{ title }}</h1>
-                  <p class="lead enter-text">{{ description }}</p>
+                  <p style="margin-bottom: 3px;" class="lead enter-text">{{ description }}</p>
                   {% include "partials/cta.njk" %}
                </aside>
