--- a/_includes/partials/cta.njk
+++ b/_includes/partials/cta.njk
@@ -2,7 +2,7 @@
   <a class="accent" href="https://micro.fromjason.xyz">
   micro
   </a> 
-   | 
+   &nbsp;| &nbsp;
    <a class="accent" href="https://www.fromjason.xyz/me#rss-feeds-by-plot">
   follow
   </a>  
