--- a/_includes/partials/cta.njk
+++ b/_includes/partials/cta.njk
@@ -1,9 +1,4 @@
 <span>
-  <a class="accent" href="https://micro.fromjason.xyz">
-  micro
-  </a> 
-   &nbsp;| &nbsp;
-   <a class="accent" href="https://www.fromjason.xyz/me#rss-feeds-by-plot">
-  follow
-  </a>  
+<a class="accent" href="https://micro.fromjason.xyz">micro</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a class="accent" href="https://www.fromjason.xyz/me#rss-feeds-by-plot">follow</a>  
 </span>
