--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -30,7 +30,7 @@ eleventyComputed:
       <li>TikTok: <a href="https://www.tiktok.com/@jasondotgov" rel="me" title="my tiktok">@jasondotgov</a></li>
       <li>Mastodon: <a href="https://mastodon.social/@fromjason" rel="me" title="my mastadon">@fromjason</a></li>
    </ul>
-   <h3>RSS feeds by plot</h3>
+   <h3 id="rss-feeds-by-plot">RSS feeds by plot</h3>
    <p>You can now subscribe to the indvidual plots that make up From Jason  <i>*air horn noise*</i>. Use the links below or copy / paste the plot's url into your favorite RSS reader.</p>
    <p>Note: both xml and json versions of my rss feed provide the same content and should both work in most reeders</p>
 
