--- a/_includes/partials/cta.njk
+++ b/_includes/partials/cta.njk
@@ -1,4 +1,4 @@
 <span>
-<a class="accent" href="https://micro.fromjason.xyz">micro</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;
+<a rel="me" class="accent" href="https://micro.fromjason.xyz" target="_blank">micro</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;
 <a class="accent" href="https://www.fromjason.xyz/me#rss-feeds-by-plot">follow</a>  
 </span>
