--- a/content/plots/freelance.njk
+++ b/content/plots/freelance.njk
@@ -11,7 +11,7 @@ description: Freelance? In this economy?
    <p>
       Here, I'll post guides, resources, and musings related to freelancing with a leftist & ADHD slant. I've been a freelancer for nearly a decade. I have hard opinions. I hope to help new freelancers get going.
    </p>
-   <p>Subscribe to my Freelance feed: (ATOM) <a href="https://fromjason.xyz/p/freelance/feed/feed.xml" class="accent" title="rss feed for freelance">xml feed</a> or <a href="https://fromjason.xyz/p/freelance/feed/feed.json" class="accent" title="rss feed for freelance">json feed</a>. If you're unsure, choose "xml".</p>
+   <p>Follow my Freelance feed: <a href="https://fromjason.xyz/p/freelance/feed/feed.xml" class="accent" title="rss feed for freelance">xml</a> or <a href="https://fromjason.xyz/p/freelance/feed/feed.json" class="accent" title="rss feed for freelance">json</a> feed. If you're unsure, choose "xml”.</p>
 </article>
 
    {% set filterByPlot = collections.posts | include("data.sub", plot) %}
