--- a/content/plots/travel.njk
+++ b/content/plots/travel.njk
@@ -11,7 +11,7 @@ description: I went to Italy once.
    <p>
       My first new plot since <a href="https://www.fromjason.xyz/p/freelance/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/" title="digital garden">launching 2.0</a>. I will start by uploading my old travel posts and go from there. 
    </p>
-      <p>Subscribe to my Travel feed: (ATOM) <a href="https://fromjason.xyz/p/travel/feed/feed.xml" class="accent" title="rss feed for travel">xml feed</a> or <a href="https://fromjason.xyz/p/travel/feed/feed.json" class="accent" title="rss feed for travel">json feed</a>. If you're unsure, choose "xml".</p>
+      <p>Follow my Travel feed: <a href="https://fromjason.xyz/p/travel/feed/feed.xml" class="accent" title="rss feed for travel">xml</a> or <a href="https://fromjason.xyz/p/travel/feed/feed.json" class="accent" title="rss feed for travel">json</a> feed. If you're unsure, choose "xml”.</p>
 </article>
 
    {% set filterByPlot = collections.posts | include("data.sub", plot) %}
