--- a/content/plots/notebook.njk
+++ b/content/plots/notebook.njk
@@ -14,7 +14,7 @@ description: Very serious stuff. Typos included.
    <p>
       Here, I post about technology, design, politics, curated resources, and internet culture. Or, anything, really. I expect to create a category system for this notebook, each with its own set of editorial expectations. More on that soon. Maybe.
    </p>
-      <p>Follow my Notebook feed: <a href="https://fromjason.xyz/p/notebook/feed/feed.xml" class="accent" title="rss feed for notebook">xml</a> or <a href="https://fromjason.xyz/p/notebook/feed/feed.json" class="accent" title="rss feed for notebook">json</a> feed. If you're unsure, choose "xml”.</p>
+      <p>Follow my Notebook: <a href="https://fromjason.xyz/p/notebook/feed/feed.xml" class="accent" title="rss feed for notebook">xml</a> or <a href="https://fromjason.xyz/p/notebook/feed/feed.json" class="accent" title="rss feed for notebook">json</a> feed. If you're unsure, choose "xml”.</p>
 </article>
 
    {% set filterByPlot = collections.posts | include("data.sub", plot) %}
