--- a/content/plots/stories.njk
+++ b/content/plots/stories.njk
@@ -11,7 +11,7 @@ description: Short, flash, & a secret third thing.
    <p>
       Here, I'll post my short stories and flash fiction. For a long while, I wrote stories in secret that would break down in the second act and then left to rot in my drafts. I'm ready to get hurt again.
    </p>
-      <p>Follow my stories feed: <a href="https://fromjason.xyz/p/stories/feed/feed.xml" class="accent" title="rss feed for stories">xml</a> or <a href="https://fromjason.xyz/p/stories/feed/feed.json" class="accent" title="rss feed for stories">json</a> feed. If you're unsure, choose "xml”.</p>
+      <p>Follow my stories: <a href="https://fromjason.xyz/p/stories/feed/feed.xml" class="accent" title="rss feed for stories">xml</a> or <a href="https://fromjason.xyz/p/stories/feed/feed.json" class="accent" title="rss feed for stories">json</a> feed. If you're unsure, choose "xml”.</p>
 </article>
 
    {% set filterByPlot = collections.posts | include("data.sub", plot) %}
