--- a/content/tags/tags.njk
+++ b/content/tags/tags.njk
@@ -13,7 +13,7 @@ layout: layouts/home.njk
 eleventyComputed:
   title: Tagged “{{ tag }}”
 permalink: /tags/{{ tag | slugify }}/
-logo: '77.png'
+logo: 'graphic-77.png'
 ---
 
 
