--- a/content/tags/tags-list.njk
+++ b/content/tags/tags-list.njk
@@ -3,7 +3,7 @@ title: All tags
 description: From notebook, freelance, & stories.
 permalink: /tags/
 layout: layouts/home.njk
-logo: '77.png'
+logo: 'graphic-77.png'
 ---
 
 <div class="auto-list-block">
