--- a/content/me/lorem-ipsum-2-0.njk
+++ b/content/me/lorem-ipsum-2-0.njk
@@ -7,7 +7,7 @@ openGraph: 'fromjason'
 sub: me
 ---
 
-# Lorem Ipsum 2.0
+<h1>Lorem Ipsum 2.0</h1>
 
 
 <!-- Mark up. Each p has a unique id and each a has respective data-target -->
