--- a/public/css/outofversion.css
+++ b/public/css/outofversion.css
@@ -50,3 +50,11 @@ text-align: left;
 .justify-left {
 text-align: left;
 }
+/* fixing images */
+
+@media screen and (max-width: 479px) {
+img {
+ width: 100%;
+ margin: 1em -1.5em;
+}
+}
