--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -95,7 +95,7 @@ z-index: 9999;
     <div class="w-layout-blockcontainer container-650px container-height w-container">
       {{ content | safe }}
       <footer class="footer">
-<script src="https://tinylytics.app/embed/Y-vHq7_yamFdt5wny55E.js" defer></script>
+<script src="https://tinylytics.app/embed/Y-vHq7_yamFdt5wny55E.js?kudos" defer></script>
         <div class="_400w-vflex">
           <img src="{{ settings.siteRoot }}/img/element-finis.svg" loading="lazy" alt="Ornamentation with the word Finis in a banner." class="ft-img">
           <div class="copywrite">2086©
