--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -13,6 +13,7 @@ defaultGraphic: 'graphic-default.png'
 <div class="e-content">   
 {{ content | safe }}
  </div>  
+  <button class="tinylytics_kudos"></button>
 <h4>Metadata</h4>
    <div class="metatable w-embed">
       <table>
