--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -42,12 +42,9 @@ eleventyComputed:
    </ol>
    
    <h3 id="my-curated-lists">My public bookmarks & lists</h3>
-   <p>Curated lists of stuff. For now, I'm embedding <a href="https://raindrop.io/JayVee" title="my public bookmarks and lists" rel="me">my public Raindrop.io account</a> because its easier. But, I hope to soon build a fast way to update and display my lists natively on FJ.</p>
- <script>
- document.getElementById("inneriframe").contentDocument.body.style.fontFamily = "Volume Tc";
- </script>  
-<iframe class="inneriframe" style="border: 0; width: 100%; height: 450px;" allowfullscreen frameborder="0" src="https://raindrop.io/JayVee/embed/me/no-header=true"></iframe>
-
+   <p>
+Note 12/10/2023: I am in thr process of revamping my bookmarks and curation. if you came here hoping for a big list of cool sites, you'll want to come back in a couple days. Id say Monday. I have some fun stuff I'm finishing up. For now, most of my lists are disabled. 
+</p>
 </div>
 
 
