--- a/_includes/partials/cta.njk
+++ b/_includes/partials/cta.njk
@@ -1,4 +1,5 @@
 <span>
 <a rel="me" class="accent" href="https://micro.fromjason.xyz" target="_blank">micro</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;
-<a class="accent" href="https://www.fromjason.xyz/me#rss-feeds-by-plot">follow</a>  
+<a class="accent" href="https://omg.fromjason.xyz">omg</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;
+<a class="accent" href="https://www.fromjason.xyz/me#rss-feeds-by-plot">feeds</a>
 </span>
