--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -23,11 +23,12 @@ eleventyComputed:
    <h3>Email</h3>
    <p>Shoot me an email anytime about anything. I'd love to hear from you » <a href="mailto:inbox@jvelazquez.email" title="my email address">Email Jason</a>.</p>
    <h3>Socials</h3>
-   <p>I'm slowly moving away from centralized social media, <i>in theory</i>. In practice, I'm still fairly active on these accounts. I'm spending more time on Mastodon these days</p>
+   <p>I'm slowly moving away from centralized social media, <i>in theory</i>. My goal is to step away first, then delete. That's
+how I did Facebook. I'm spending most of my time on Mastodon these days.</p>
    <ul>
       <li>Instagram: <a href="https://instagram.com/jasondotgov" rel="me" tilte="my instagram">@jasondotgov</a></li>
       <li>Threads: <a href="https://www.threads.net/@jasondotgov" rel="me" title="my threads">@jasondotgov</a></li>
-      <li>TikTok: <a href="https://www.tiktok.com/@jasondotgov" rel="me" title="my tiktok">@jasondotgov</a></li>
+      <li><strike>TikTok</strike>: Haven't neen active in a couple months so its just about time. *gulp*</li>
       <li>Mastodon: <a href="https://mastodon.social/@fromjason" rel="me" title="my mastadon">@fromjason</a></li>
    </ul>
    <h3 id="rss-feeds-by-plot">RSS feeds by plot</h3>
