--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -28,7 +28,7 @@ how I did Facebook. I'm spending most of my time on Mastodon these days.</p>
    <ul>
       <li>Instagram: <a href="https://instagram.com/jasondotgov" rel="me" tilte="my instagram">@jasondotgov</a></li>
       <li>Threads: <a href="https://www.threads.net/@jasondotgov" rel="me" title="my threads">@jasondotgov</a></li>
-      <li><strike>TikTok</strike>: Haven't neen active in a couple months so its just about time. *gulp*</li>
+      <li><strike>TikTok</strike>: Haven't been active in a couple months so its just about time. *gulp*</li>
       <li>Mastodon: <a href="https://mastodon.social/@fromjason" rel="me" title="my mastadon">@fromjason</a></li>
    </ul>
    <h3 id="rss-feeds-by-plot">RSS feeds by plot</h3>
