--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -73,7 +73,10 @@ defaultGraphic: 'graphic-default.png'
    </div>
 </article>
 <aside class="postscripts">
-<div class="ps-item">
+{% if noCoffee %}
+&nbsp;
+{% else %}
+<div class="ps-item coffee">
 <div class="ps-title">
 Caffinate me
 </div>
@@ -81,10 +84,13 @@ Caffinate me
 If you have ever found my writing valuable and you want to help me continue avoiding doing my laundry, you can <a href="https://www.buymeacoffee.com/fromjason" target="_blank">buy me a coffee</a>. It would mean a lot.
  </div> 
 </div>
+{% endif %}
+
 <div class="ps-item">
       <div class="ps-title">† Article&#x27;s assumed audience (AAA)</div>
       <div class="ps-body">Sometimes, I identify who I&#x27;m writing for as a way to provide context. It&#x27;s like saying, &quot;I&#x27;m using a lot of technical terms because I wrote this post for frontend developers,” or &quot;Sorry if I&#x27;m getting too symmetrical, this one&#x27;s for my Wes Anderson fans.&quot; <em>But</em>, all are welcomed, always. If you&#x27;re not in this article&#x27;s intended audience, but you find this article interesting, wonderful! Please stick around, read the post, and feel free to ask me questions.</div>
    </div>
+
    <div id="ps-affiliate" class="ps-item">
       <div class="ps-title">Referrals &amp; affiliates</div>
       <div class="ps-body"> I do <em>not</em> receive commission for anything I share, endorse, or discuss, anywhere on <em>From Jason</em>. I have no sponsorships, or advertiser agreements. If that ever changes, I will let you know.</div>
