--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -44,7 +44,8 @@ how I did Facebook. I'm spending most of my time on Mastodon these days.</p>
    
    <h3 id="my-curated-lists">My public bookmarks & lists</h3>
    <p>
-Note 12/10/2023: I am in thr process of revamping my bookmarks and curation. if you came here hoping for a big list of cool sites, you'll want to come back in a couple days. Id say Monday. I have some fun stuff I'm finishing up. For now, most of my lists are disabled. 
+Note 12/10/2023: I am in the process of revamping my bookmarks and curation. if you came here hoping for a big list of cool sites, you'll want to come back later. For now, most of my lists are disabled. 
+01/09/2024: I'm working on it promise.
 </p>
 </div>
 
