--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -93,6 +93,6 @@ If you have ever found my writing valuable and you want to help me continue avoi
 
    <div id="ps-affiliate" class="ps-item">
       <div class="ps-title">Referrals &amp; affiliates</div>
-      <div class="ps-body"> I do <em>not</em> receive commission for anything I share, endorse, or discuss, anywhere on <em>From Jason</em>. I have no sponsorships, or advertiser agreements. If that ever changes, I will let you know.</div>
+      <div class="ps-body"> I do <em>not</em> receive commission for anything I share, endorse, or discuss, anywhere on <em>From Jason</em>. I have no advertiser agreements. I currently have a buymeacoffee account where readers can support my writing. If that ever changes, I will let you know.</div>
    </div>
 </aside>
