--- a/content/me/now.njk
+++ b/content/me/now.njk
@@ -6,5 +6,5 @@ graphicAlt: 'illustration of a mask'
 sub: me
 ---
 <h1>{{ title }}</h1>
-<p class="lead under-title">{{ description }}</p>
-<p>What I'm up to now is working on the <i>what I'm up to now</i> page. Stay tuned.</p>
+
+<p>My "now" page is located at <a href="https://omg.fromjason.xyz/now">omg.fromjason.xyz/now</a> for now, at least heh.</p>
