--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -13,7 +13,7 @@ defaultGraphic: 'graphic-default.png'
 <div class="e-content">   
 {{ content | safe }}
  </div>  
-  <button class="tinylytics_kudos"></button>
+  <button class="tinylytics_kudos" style="margin-top: 1em; padding: 0.4em 0.75em; background: #FAF9F5; border: 1px solid #c8c4bf;"></button>
 <h4>Metadata</h4>
    <div class="metatable w-embed">
       <table>
