--- a/public/css/one.css
+++ b/public/css/one.css
@@ -2175,7 +2175,7 @@ textarea.w-select {
 
 :root {
   --fonts--primary-font-family: "Volume Tc", Georgia, sans-serif;
-  --color--primary: #2c251d;
+  --color--primary: #121A56;
   --base--desktop-font-size: 19px;
   --base--tablet-font-size: 18px;
   --base--mobile-hoz-font-size: 17px;
